<resources>
    <string name="app_name">MadridTourGuideApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="find_city_online">Find Madrid online in...</string>
    <string name="link_one">www.tourspain.es</string>
    <string name="link_two">www.munimadrid.es</string>
    <string name="link_three">www.puertademadrid.com</string>
    <string name="link_four">www.ctm-madrid.es</string>
    <string name="link_five">www.descubremadrid.com</string>
    <string name="link_six">madrid.lanetro.com</string>
    <string name="link_seven">www.madrid.org</string>
    <string name="link_eight">www.madridamano.com</string>

    <string name="category_west">West</string>
    <string name="category_east">East</string>
    <string name="category_center">Center</string>
    <string name="category_north">North</string>

    <!-- WEST locations -->
    <string name="casa_campo">Casa de Campo</string>
    <string name="catedral_almudena">Catedral de la Almudena</string>
    <string name="museo_america">Museo de América</string>
    <string name="museo_traje">Museo del Traje</string>
    <string name="palacio_real">Palacio Real</string>
    <string name="plaza_oriente">Plaza de Oriente</string>

    <!-- CENTER locations -->
    <string name="museo_reina_sofia">Museo Reina Sofía</string>
    <string name="museo_thyssen">Museo Thyssen</string>
    <string name="plaza_mayor">Plaza Mayor</string>
    <string name="puerta_del_sol">Puerta del Sol</string>
    <string name="rastro">El Rastro</string>
    <string name="plaza_cebada">Plaza de la Cebada</string>

    <!-- EAST locations -->
    <string name="museo_prado">Museo del Prado</string>
    <string name="parque_retiro">Parque del Retiro</string>
    <string name="puerta_alcala">Puerta de Alcalá</string>
    <string name="estacion_atocha">Estación de Atocha</string>
    <string name="fabrica_tapices">Real Fábrica de Tapices</string>

    <!-- NORTH locations -->
    <string name="museo_sorolla">Museo Sorolla</string>
    <string name="estatuas_botero">Estatuas de Botero</string>
    <string name="fundacion_march">Fundación Juan March</string>
    <string name="plaza_dos_mayo">Plaza de Dos de Mayo</string>
    <string name="sala_canal">Sala del Canal de Isabel II</string>

    <!--Addresses -->
    <string name="casa_campo_location">Calle Marqués de Monistrol</string>
    <string name="catedral_almudena_location">Calle Bailén</string>
    <string name="museo_america_location">Avenida Reyes Católicos 6</string>
    <string name="museo_traje_location">Avenida Juan de Herrera 6</string>
    <string name="palacio_real_location">Calle Bailén</string>
    <string name="plaza_oriente_location">Calle Bailén</string>
    <string name="museo_reina_sofia_location">Calle Santa Isabel 52</string>
    <string name="museo_thyssen_location">Paseo del Prado 8</string>
    <string name="plaza_mayor_location">Plaza Mayor</string>
    <string name="puerta_del_sol_location">Puerta del Sol</string>
    <string name="rastro_location">Ribera de Curtidores</string>
    <string name="plaza_cebada_location">Plaza de la Cebada</string>
    <string name="museo_prado_location">Paseo del Prado</string>
    <string name="parque_retiro_location">Calle Alcalá</string>
    <string name="puerta_alcala_location">Plaza de la Independencia</string>
    <string name="estacion_atocha_location">Plaza del Emperador Carlos V</string>
    <string name="fabrica_tapices_location">Calle de Fuenterrabía 2</string>
    <string name="museo_sorolla_location">Paseo Gral. Martínez Campos 37</string>
    <string name="estatuas_botero_location">Plaza San Juan de la Cruz</string>
    <string name="fundacion_march_location">Calle Castelló 77</string>
    <string name="plaza_dos_mayo_location">Plaza de Dos de Mayo</string>
    <string name="sala_canal_location">Calle Santa Engracia 125</string>

    <!--Metro stations -->
    <string name="casa_campo_metro">Lago, Batán, Casa de Campo</string>
    <string name="catedral_almudena_metro">Ópera</string>
    <string name="museo_america_metro">Moncloa, Islas Filipinas</string>
    <string name="museo_traje_metro">Moncloa, Ciudad Universitaria</string>
    <string name="palacio_real_metro">Ópera</string>
    <string name="plaza_oriente_metro">Ópera</string>
    <string name="museo_reina_sofia_metro">Atocha</string>
    <string name="museo_thyssen_metro">Banco de España</string>
    <string name="plaza_mayor_metro">Sol, Ópera</string>
    <string name="puerta_del_sol_metro">Sol</string>
    <string name="rastro_metro">Tirso de Molina</string>
    <string name="plaza_cebada_metro">La Latina, Tirso de Molina</string>
    <string name="museo_prado_metro">Banco de España, Atocha</string>
    <string name="parque_retiro_metro">Retiro, Atocha, Ibiza</string>
    <string name="puerta_alcala_metro">Retiro</string>
    <string name="atocha_metro">Atocha</string>
    <string name="fabrica_tapices_metro">Menéndez Pelayo</string>
    <string name="museo_sorolla_metro">Iglesia, Rubén Darío</string>
    <string name="estatuas_botero_metro">Colón, Nuevos Ministerios</string>
    <string name="fundacion_march_metro">Núñez de Balboa</string>
    <string name="plaza_dos_mayo_metro">Bilbao</string>
    <string name="sala_canal_metro">Ríos Rosas</string>

    <!--Bus stops-->
    <string name="casa_campo_bus">41, 33, 39, 65</string>
    <string name="catedral_almudena_bus">3, 31, 148</string>
    <string name="museo_america_bus">Circular, 12, 16, 44</string>
    <string name="museo_traje_bus">46, 66, 82</string>
    <string name="palacio_real_bus">3, 25, 33</string>
    <string name="plaza_oriente_bus">3, 25, 33</string>
    <string name="museo_reina_sofia_bus">6, 10, 14, 24</string>
    <string name="museo_thyssen_bus">1, 2, 5, 24</string>
    <string name="plaza_mayor_bus">3, 5, 51, 52</string>
    <string name="puerta_del_sol_bus">3, 5, 15, 20</string>
    <string name="rastro_bus">41, 60</string>
    <string name="plaza_cebada_bus">17, 23, 35</string>
    <string name="museo_prado_bus">9, 10, 14, 19</string>
    <string name="parque_retiro_bus">2, 14, 19, 20</string>
    <string name="puerta_alcala_bus">9, 15, 20</string>
    <string name="atocha_bus">14, 27, 34</string>
    <string name="fabrica_tapices_bus">14, 24, 26, 32</string>
    <string name="museo_sorolla_bus">5, 17, 16, 40</string>
    <string name="estatuas_botero_bus">7, 14, 27, 40</string>
    <string name="fundacion_march_bus">29, 52</string>
    <string name="plaza_dos_mayo_bus">40, 21, 149</string>
    <string name="sala_canal_bus">3, 37, 149</string>

</resources>
