<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/city_picture"
                    android:layout_width="100dp"
                    android:layout_height="120dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/find_city"
                    style="@style/Title"
                    android:text="@string/find_city_online" />

                <TextView
                    android:id="@+id/link_one"
                    style="@style/Note"
                    android:text="@string/link_one"/>

                <TextView
                    android:id="@+id/link_two"
                    style="@style/Note"
                    android:text="@string/link_two"/>

                <TextView
                    android:id="@+id/link_three"
                    style="@style/Note"
                    android:text="@string/link_three"/>

                <TextView
                    android:id="@+id/link_four"
                    style="@style/Note"
                    android:text="@string/link_four"/>

                <TextView
                    android:id="@+id/link_five"
                    style="@style/Note"
                    android:text="@string/link_five"/>

                <TextView
                    android:id="@+id/link_six"
                    style="@style/Note"
                    android:text="@string/link_six"/>

                <TextView
                    android:id="@+id/link_seven"
                    style="@style/Note"
                    android:text="@string/link_seven"/>

                <TextView
                    android:id="@+id/link_eight"
                    style="@style/Note"
                    android:text="@string/link_eight"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
